Email OTP send feture

--- a/.env
+++ b/.env
@@ -21,6 +21,12 @@ EMAIL_USER=your-email@gmail.com
 EMAIL_PASSWORD=your-app-password
 EMAIL_FROM=noreply@yourapp.com
 
+# Redis Configuration
+REDIS_HOST="localhost"
+REDIS_PORT=6379
+REDIS_PASSWORD="123456"
+REDIS_DB=0
+
 # Frontend URL (for email links)
 FRONTEND_URL=http://localhost:3001
 
