--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
+    "redis": "^5.8.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
