--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
+    "@google-cloud/documentai": "^9.5.0",
     "@prisma/client": "^6.17.1",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
