--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^3.0.1",
     "morgan": "^1.10.0",
