--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,38 +39,38 @@ services:
     networks:
       - app_network
 
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: app_backend
-    restart: unless-stopped
-    ports:
-      - "${APP_PORT:-3000}:3000"
-    env_file:
-      - .env
-    environment:
-      - NODE_ENV=${NODE_ENV:-production}
-      - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@postgres:5432/${DB_NAME:-myapp}?schema=public
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-redis123}
-      - GOOGLE_APPLICATION_CREDENTIALS=/app/gcloud-service-key.json
-    volumes:
-      - ./gcloud-service-key.json:/app/gcloud-service-key.json:ro
-    depends_on:
-      redis:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    networks:
-      - app_network
+#  app:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    container_name: app_backend
+#    restart: unless-stopped
+#    ports:
+#      - "${APP_PORT:-3000}:3000"
+#    env_file:
+#      - .env
+#    environment:
+#      - NODE_ENV=${NODE_ENV:-production}
+#      - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@postgres:5432/${DB_NAME:-myapp}?schema=public
+#      - REDIS_HOST=redis
+#      - REDIS_PORT=6379
+#      - REDIS_PASSWORD=${REDIS_PASSWORD:-redis123}
+#      - GOOGLE_APPLICATION_CREDENTIALS=/app/gcloud-service-key.json
+#    volumes:
+#      - ./gcloud-service-key.json:/app/gcloud-service-key.json:ro
+#    depends_on:
+#      redis:
+#        condition: service_healthy
+#      postgres:
+#        condition: service_healthy
+#    healthcheck:
+#      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 3
+#      start_period: 40s
+#    networks:
+#      - app_network
 
 volumes:
   redis_data:
