--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.1",
     "qs": "^6.14.0",
     "redis": "^5.8.3",
