--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "crypto": "^1.0.1",
     "dateformat": "^5.0.3",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "fast-csv": "^5.0.5",
     "helmet": "^7.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
@@ -46,7 +48,7 @@
     "resend": "^6.1.2",
     "sib-api-v3-sdk": "^8.5.0",
     "sortobject": "^5.6.0",
-    "zod": "^3.22.4"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
