--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.3.0",
     "fast-csv": "^5.0.5",
     "helmet": "^7.1.0",
     "joi": "^18.0.1",
