--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.3.0",
     "fast-csv": "^5.0.5",
+    "firebase-admin": "^13.6.0",
     "helmet": "^7.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
