--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dateformat": "^5.0.3",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.3.0",
     "fast-csv": "^5.0.5",
@@ -44,6 +44,8 @@
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.10.1",
+    "path": "^0.12.7",
+    "pdfkit": "^0.17.2",
     "qs": "^6.14.0",
     "redis": "^5.8.3",
     "resend": "^6.1.2",
