--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.1",
     "path": "^0.12.7",
     "pdfkit": "^0.17.2",
