--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^6.10.1",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "qs": "^6.14.0",
     "redis": "^5.8.3",
