--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@google-cloud/documentai": "^9.5.0",
     "@google/generative-ai": "^0.24.1",
     "@payos/node": "^2.0.3",
-    "@prisma/client": "6.17.1",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -59,6 +60,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
-    "prisma": "6.17.1"
+    "prisma": "^7.2.0"
   }
 }
