--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.965.0",
     "@getbrevo/brevo": "^3.0.1",
     "@google-cloud/documentai": "^9.5.0",
     "@google/generative-ai": "^0.24.1",
     "@payos/node": "^2.0.3",
-    "@prisma/client": "6.17.1",
+    "@prisma/client": "^6.17.1",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
